--- a/arch/arm64/configs/wayne_defconfig
+++ b/arch/arm64/configs/wayne_defconfig
@@ -161,6 +161,10 @@ CONFIG_TAS2557_REGMAP=y
 CONFIG_TAS2557_CODEC=y
 CONFIG_TAS2557_MISC=y
 # CONFIG_JUMP_LABEL is not set
+CONFIG_LD_IS_LLD=y
+CONFIG_TOOLS_SUPPORT_RELR=y
+CONFIG_RELR=y
+CONFIG_LTO=y
 CONFIG_ARCH_MMAP_RND_BITS=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_ARCH_HAS_REFCOUNT_FULL=y
